PyMaker/datas/object2/RawHTML/i7401/Python_DOC_referPages.error-in-python-parse-function.txt
<div class="post-text" itemprop="text">
<p>I am really new to Python and have some error when I run my code.</p>
<p>I have this Amazon data set which is formatted as a JSON file
(Please see below for the json format).</p>
<pre><code>{
  "reviewerID": "A2SUAM1J3GNN3B",
  "asin": "0000013714",
  "reviewerName": "J. McDonald",
  "helpful": [2, 3],
  "reviewText": "I bought this for my husband who plays the piano.  He is 
having a wonderful time playing these old hymns.  The music  is at times 
hard to read because we think the book was published for singing from more 
than playing from.  Great purchase though!",
  "overall": 5.0,
  "summary": "Heavenly Highway Hymns",
  "unixReviewTime": 1252800000,
  "reviewTime": "09 13, 2009"
}
</code></pre>
<p>The command I am using is offered by the data senders, which converts the JSON file above into 'strict json' file (the original JSON file is not strict json based on the data senders).</p>
<p>The command offered by them is as follows:</p>
<pre><code>import json
import gzip

def parse(path):
  g = gzip.open(path, 'r')
  for l in g:
    yield json.dumps(eval(l))

f = open("output.strict", 'w')
for l in parse("reviews_Video_Games.json.gz"):
  f.write(l + '\n')
</code></pre>
<p>I have only changed the path, putting the directory of the the JSON file with quotation marks (e.g., "C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz")</p>
<p>For example, the code that I ran looks like this:</p>
<pre><code>import json
import gzip

def parse(C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz):
  g = gzip.open(C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz, 'r')
  for l in g:
    yield json.dumps(eval(l))

f = open("output.strict", 'w')
for l in parse("reviews_Video_Games.json.gz"):
  f.write(l + '\n')
</code></pre>
<p>However, I get the following error:</p>
<pre><code>C:\Users\daisy\AppData\Local\Programs\Python\Python36-32&gt;python C:\Users\daisy\AppData\Local\Programs\Python\strict_json.py
  File "C:\Users\daisy\AppData\Local\Programs\Python\strict_json.py", line 4
def parse("C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz"):
                                                                                ^
SyntaxError: invalid syntax
</code></pre>
<p>Do you have any idea what is wrong with the syntax?</p>
<p>Again the original code is given by the data sender so I am quite sure that the code is correct. I think I did something wrong when I changed the 'path' into my file directory.</p>
<p>Thank you. </p>
</div>
<div class="post-text" itemprop="text">
<p>You can't define a function like that.</p>
<pre><code>def parse(file_path):
  g = gzip.open(file_path, 'r')
  for l in g:
    yield json.dumps(eval(l))

parse(r"C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz")
</code></pre>
<p>Though you could set a default value like so:</p>
<pre><code>def parse(file_path=r"C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz"):
  g = gzip.open(file_path, 'r')
  for l in g:
    yield json.dumps(eval(l))

parse()
</code></pre>
<p><strong><em>Update for encoding issue</em></strong></p>
<pre><code>&gt;&gt;&gt; "C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz"
  File "&lt;stdin&gt;", line 1
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
&gt;&gt;&gt; "C:\\Users\\daisy\\Research\\study\\Amazon\\reviews_Video_Games.json.gz"
'C:\\Users\\daisy\\Research\\study\\Amazon\\reviews_Video_Games.json.gz'
&gt;&gt;&gt; r"C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz"
'C:\\Users\\daisy\\Research\\study\\Amazon\\reviews_Video_Games.json.gz'
</code></pre>
</div>
<span class="comment-copy"><code>def parse(C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz):</code>??</span>
<span class="comment-copy">The function was meant to be used as is.  <code>path</code> is a parameter you supply when calling the function, not something you're supposed to change in the function definition itself.</span>
<span class="comment-copy">That not how it works. You have to substitute the value when you <i>call</i> the function, i.e. <code>for l in parse(r"C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz"):</code> Also, don't forget the <code>"..."</code> and better make it a <code>r</code> raw string.</span>
<span class="comment-copy">@WillemVanOnsem Hello, Willem, I am really new to python and don't know exactly what I put in the parenthesis. I thought that the path should be replaced with the directory path of the json file. Could you let me know what is wrong with it?</span>
<span class="comment-copy">Here is the official syntax for function definitions <a href="https://docs.python.org/3/reference/compound_stmts.html#function-definitions" rel="nofollow noreferrer">docs.python.org/3/reference/…</a> . In a def statement, python expects a parameter list, usually a comma separated sequence of identifiers. You need to read a python tutorial.</span>
<span class="comment-copy">Thanks, Ipiner. I ran the second code, but I got the same error as below, which is 'SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape'. Do you have any idea how to fix this?</span>
<span class="comment-copy">In the future please leave the original question and add new content to the bottom so as not to outdate any answers. Your new error is a encoding issue, escape your backslashes or mark the string as raw with r <code>r"C:\Users\daisy\Research\study\Amazon\reviews_Video_Games.json.gz"</code></span>
